# gdai

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  convertido.json  docker-compose.yaml  index.html  mkdocs.yml  pyproject.toml  search.html
.github/workflows/: deploy.yml
about/: index.html
code_of_conduct/: index.html
contributing/: index.html
docs/: about.md  code_of_conduct.md  contributing.md  index.md
infra/nginx/: gdai.conf  nginx.conf
infra/pgvector/: init.sql
infra/rabbitmq/: definitions.json
search/: search_index.json
src/: main.py
src/actor/embedding/: actor.py  exceptions.py  repository.py  service.py
src/actor/extractor/: actor.py  document_extractor.py  exceptions.py  service.py
src/api/: app.py  conf.py  deps.py  llm.py  main.py  repository.py  router.py  service.py
src/api/models/: document.py  search.py
src/api/repository/: repository.py
src/api/routers/: administration.py  auth.py  document.py  search.py
src/embedding/: actor.py  conf.py  embedding_model.py  exceptions.py  repository.py  schema.py  service.py
src/embedding_pipeline/: cli.py  embedding.py  exceptions.py  pipeline.py  repository.py  schema.py  service.py  test_embedding_pipeline.py
src/extractor/: actor.py  conf.py  document_extractor.py  exceptions.py  service.py
src/parser/: actor.py  document_extractor.py  exceptions.py  schema.py  service.py
src/search/: actor.py  conf.py  repository.py  service.py
src/shared/: broker.py  conf.py  database.py  embedding_model.py  llm_model.py  logger.py  rabbitmq_broker.py  schema.py
src/splitter/: service.py
tests/: test_embedding_pipeline.py
tests/e2e/: main.py
(+11 files in other folders)
